--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="cont" style="display: flex; justify-content: space-between;">
-            <img src="Logo.svg">
+            <img src="Logo.png">
             <div class="right-header">
                 <a href="#galleri">Galleri</a>
                 <a href="#om-projektet">Om projektet</a>
@@ -24,7 +24,7 @@
         <img src="hero.jpg">
         <div class="dark">
             <div class="cont">
-                <p>De resande har funnits i Sverige i flera hundra år, men är ändå så gott som osynliga i museernas samlingar — trots sin status som nationell minoritet. Allmänhetens kunskap om gruppen är idag låg och gruppen blandas ofta samman med senare invandrade romska grupper. Utifrån parollen ”Syns man inte så finns man inte” tar vi nu sikte på att synliggöra de resandes historia genom att samla in fotografier som tillsammans skapar en kunskapskälla.<br><a href="#om-projektet">Läs mer här</a></p>
+                <p>De resande har funnits i Sverige i flera hundra år, men är ändå så gott som osynliga i den traditionella historieskrivningen och i museernas samlingar — trots sin status som nationell minoritet. Allmänhetens kunskap om gruppen är idag låg och resande blandas ofta samman med senare invandrade romska grupper. Utifrån parollen ”Syns man inte så finns man inte” tar vi nu sikte på att synliggöra de resandes historia genom att samla in äldre fotografier kopplade till gruppen. En unik kunskapskälla skapas som speglar de resandes liv fram till mitten av 1900-talet.  <br><a href="#om-projektet">Läs mer här</a></p>
             </div>
         </div>
     </section>
@@ -55,7 +55,7 @@
         <div class="cont">
             <h2>Om projektet</h2>
             <br>
-            <p>De resande har funnits i Sverige i flera hundra år och var ett självklart inslag i det gamla bondesamhället. Man har utfört allehanda yrken, tjänster och hantverk, ändå är gruppen så gott som osynlig i museernas samlingar, trots sin status som nationell minoritet. Allmänhetens kunskap om gruppen är idag låg och gruppen blandas ofta samman med senare invandrade romska grupper.</p>
+            <p>De resande har funnits i Sverige i flera hundra år och var ett självklart inslag i det gamla bondesamhället. Man har utfört allehanda yrken, tjänster och hantverk, ändå är gruppen så gott som osynlig i museernas samlingar, trots sin status som nationell minoritet. Allmänhetens kunskap om gruppen är idag låg och resande blandas ofta samman med senare invandrade romska grupper.</p>
             <br>
             <p>Med projektet Resandebilder vill vi ändra på detta. Genom att samla fotografier kopplade till de resandes historia skapas en unik kunskapskälla som synliggör de resandes liv fram till mitten av 1900-talet. Genom insamling dokumenteras och bevaras bilder och kunskap som annars riskerar att gå förlorad. Sammantagna berättar bilderna en rikare historia än vad ett enskilt fotografi kan göra. Samtidigt framträder mångfalden av människoöden som finns och har funnits inom gruppen.</p>
             <br>
@@ -86,7 +86,7 @@
                     <i class='bx bxl-instagram'></i>
                 </div>
                 <div class="footer-logo">
-                    <img src="LogoWhite.svg">
+                    <img src="LogoWhite.png">
                 </div>
             </div>
             <p style="text-align: center;">Copyright 2023 Frantzwagner Sällskapet</p>
