--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
             <div class="footer-content">
                 <div class="footer-links">
                     <h3>Följ oss på sociala medier</h3>
-                    <i class='bx bxl-facebook-circle'></i>
-                    <i class='bx bxl-instagram'></i>
+                    <a href="https://www.facebook.com/Frantzwagnerkettanepa" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
                 </div>
                 <div class="footer-logo">
                     <img src="LogoWhite.png">
